--- a/module 3/module3_examples.ipynb
+++ b/module 3/module3_examples.ipynb
@@ -1377,8 +1377,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76372c59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some shape as: Shape\n",
+      "purple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Child classes and parent classes\n",
+    "#Parent\n",
+    "class Shape:\n",
+    "    name = \"Some shape\"\n",
+    "    def __init__(self,color = \"black\"):\n",
+    "        self.color = color\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name} as: {type(self).__name__}\"\n",
+    "    \n",
+    "s1 = Shape()\n",
+    "print(s1)\n",
+    "s2 = Shape(\"purple\")\n",
+    "print(s2.color)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "16fe02ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square as: Square\n",
+      "black\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Square(Shape):\n",
+    "    name = \"Square\"\n",
+    "    def __init__(self,_x):\n",
+    "        super().__init__()\n",
+    "        self._x = _x\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return self._x * self._x\n",
+    "\n",
+    "my_square = Square(5)\n",
+    "print(my_square)\n",
+    "print(my_square.color)\n",
+    "print(my_square.area())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "130ddd6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm a cube\n",
+      "150\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cube(Square):\n",
+    "    name = \"Cube\"\n",
+    "    \n",
+    "    def __init__(self,_x):\n",
+    "        #call squares init\n",
+    "        super().__init__(_x)\n",
+    "    #cube str method that calls squares    \n",
+    "    def __str__(self):\n",
+    "        return \"I'm a cube\"\n",
+    "    def show_parent(self):\n",
+    "        return super().__str__()\n",
+    "    def area(self):\n",
+    "        return 6 * self._x ** 2\n",
+    "    def area_side(self):\n",
+    "        return super().area()\n",
+    "\n",
+    "my_cube = Cube(5)\n",
+    "print(my_cube)\n",
+    "my_cube.show_parent()\n",
+    "print(my_cube.area())\n",
+    "print(my_cube.area_side())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2119d734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_tupe = (my_square, s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2cd86242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<__main__.Square object at 0x000002688A442320>, <__main__.Shape object at 0x000002688A484070>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_tupe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75d0ebf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Square as: Square'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_tupe[0].__str__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "279717a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_tupe[0].name = \"New Square\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7407afe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'New Square as: Square'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_tupe[0].__str__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abb6ddb8",
    "metadata": {},
    "outputs": [],
    "source": []
