--- a/module 4/module4_examples.ipynb
+++ b/module 4/module4_examples.ipynb
@@ -33,8 +33,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d85dd1a9-bf6e-4721-af1b-bb7c366dcf2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter rating:  881\n",
+      "Enter division:  MA3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registered for division\n"
+     ]
+    }
+   ],
+   "source": [
+    "divisions = { \"MA4\" : 849, \"MA3\" : 899, \"MA2\" : 934, \"MA1\" : 970}\n",
+    "\n",
+    "class InvalidRatingException(Exception):\n",
+    "    pass\n",
+    "\n",
+    "def register(rating, division):\n",
+    "    if rating > divisions[division]:\n",
+    "        raise InvalidRatingException\n",
+    "    else:\n",
+    "        print(\"Registered for {division} with rating {rating}\")\n",
+    "\n",
+    "try:\n",
+    "    rating = int(input(\"Enter rating: \"))\n",
+    "    div = input(\"Enter division: \")\n",
+    "    register(rating,div)\n",
+    "except InvalidRatingException:\n",
+    "    print(\"Cannot register for division\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0882bc5d-8c03-4b87-9698-95b0c360e858",
    "metadata": {},
    "outputs": [],
    "source": []
